AdvancedConvertor recursive